src/typography.css
body {
  font-family: 'Arial', sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.large-title {
  font-weight: 600;
  font-size: 28px;
  line-height: 34px;
}

.title {
  font-weight: 500;
  font-size: 20px;
  line-height: 18px;
}

.text-md {
  font-weight: 500;
  font-size: 15px;
  line-height: 18px;
}

.text-rg {
  font-weight: 400;
  font-size: 15px;
  line-height: 18px;
}

.text-caption-md {
  font-weight: 500;
  font-size: 12px;
  line-height: 14px;
}

.text-caption-rg {
  font-weight: 400;
  font-size: 12px;
  line-height: 14px;
}

.text-caption-sm {
  font-weight: 400;
  font-size: 8px;
  line-height: 8px;
}

span,
p,
a,
div,
input,
.text-rg {
  font-weight: 400;
  font-size: 14px;
  line-height: 16px;
}

.caption-color {
  color: #94A3B8;
}

